--- a/animal-chipping-front/src/app/app.component.html
+++ b/animal-chipping-front/src/app/app.component.html
@@ -350,6 +350,8 @@
 
   </div>
 
+  <router-outlet></router-outlet>
+
   <!-- Resources -->
   <h2>Resources</h2>
   <p>Here are some links to help you get started:</p>
