--- a/animal-chipping-front/src/app/account/account.component.html
+++ b/animal-chipping-front/src/app/account/account.component.html
@@ -1,53 +1,58 @@
-<div class="container">
-    <!-- First Form -->
-    <h3>Form 1</h3>
-    <form>
-        <div class="form-group">
-            <label for="id">ID</label>
-            <input type="text" class="form-control" id="id" name="id" placeholder="Enter ID">
+<div class="container d-flex">
+    <div class="container border p-4">
+        <h3>Get an Account by ID</h3>
+        <form class="mb-3">
+            <div class="form-group">
+                <label for="id">ID</label>
+                <input type="text" class="form-control" id="id" name="id" placeholder="Enter ID">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+        <div class="card">
+            <div class="card-header">id</div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">First name</li>
+                <li class="list-group-item">Last name</li>
+                <li class="list-group-item">email</li>
+            </ul>
         </div>
-        <div class="form-group">
-            <label for="firstName">First Name</label>
-            <input type="text" class="form-control" id="firstName" name="firstName" readonly>
-        </div>
-        <div class="form-group">
-            <label for="lastName">Last Name</label>
-            <input type="text" class="form-control" id="lastName" name="lastName" readonly>
-        </div>
-        <div class="form-group">
-            <label for="email">Email</label>
-            <input type="email" class="form-control" id="email" name="email" readonly>
-        </div>
-    </form>
-    <!-- Second Form -->
-    <h3>Form 2</h3>
-    <form>
-        <div class="form-group">
-            <label for="firstName2">First Name</label>
-            <input type="text" class="form-control" id="firstName2" name="firstName2" placeholder="Enter First Name">
-        </div>
-        <div class="form-group">
-            <label for="lastName2">Last Name</label>
-            <input type="text" class="form-control" id="lastName2" name="lastName2" placeholder="Enter Last Name">
-        </div>
-        <div class="form-group">
-            <label for="email2">Email</label>
-            <input type="email" class="form-control" id="email2" name="email2" placeholder="Enter Email">
-        </div>
-        <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" class="form-control" id="password" name="password" placeholder="Enter Password">
-        </div>
-    </form>
-    <!-- Third Form -->
-    <h3>Form 3</h3>
-    <form>
-        <div class="form-group">
-            <label for="id2">ID</label>
-            <input type="text" class="form-control" id="id2" name="id2" placeholder="Enter ID">
-        </div>
-        <div class="alert alert-success" role="alert">
-            Account has been deleted!
-        </div>
-    </form>
+    </div>
+
+    <div class="container border p-4">
+        <h3>Add a new Account</h3>
+        <form>
+            <div class="form-group">
+                <label for="firstName2">First Name</label>
+                <input type="text" class="form-control" id="firstName2" name="firstName2"
+                    placeholder="Enter First Name">
+            </div>
+            <div class="form-group">
+                <label for="lastName2">Last Name</label>
+                <input type="text" class="form-control" id="lastName2" name="lastName2" placeholder="Enter Last Name">
+            </div>
+            <div class="form-group">
+                <label for="email2">Email</label>
+                <input type="email" class="form-control" id="email2" name="email2" placeholder="Enter Email">
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" id="password" name="password" placeholder="Enter Password">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
+
+    <div class="container border p-4">
+        <h3>Delete an Account</h3>
+        <form>
+            <div class="form-group">
+                <label for="id2">ID</label>
+                <input type="text" class="form-control" id="id2" name="id2" placeholder="Enter ID">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+            <div class="alert alert-success mt-3" role="alert">
+                Account has been deleted!
+            </div>
+        </form>
+    </div>
 </div>
