--- a/animal-chipping-front/src/app/app.component.html
+++ b/animal-chipping-front/src/app/app.component.html
@@ -20,7 +20,7 @@
         <a class="nav-link" href="/location">Location</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/animal-visited-location">Animal visited location</a>
+        <a class="nav-link" href="/visited-location">Animal visited location</a>
       </li>
     </ul>
   </div>
