--- a/animal-chipping-front/src/app/animal/animal.component.html
+++ b/animal-chipping-front/src/app/animal/animal.component.html
@@ -1,1 +1,124 @@
-<p>animal works!</p>
+<div class="container d-flex">
+    <div class="container border p-4">
+        <h3>Get an Animal</h3>
+        <form class="mb-3">
+            <div class="form-group">
+                <label for="animalId">ID</label>
+                <input type="number" class="form-control" id="animalId" name="animalId" placeholder="Enter animal ID">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+        <div class="card">
+            <div class="card-header">id</div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">animalTypes</li>
+                <li class="list-group-item">weight</li>
+                <li class="list-group-item">length</li>
+                <li class="list-group-item">height</li>
+                <li class="list-group-item">gender</li>
+                <li class="list-group-item">lifeStatus</li>
+                <li class="list-group-item">chippingDateTime</li>
+                <li class="list-group-item">chipperId</li>
+                <li class="list-group-item">chippingLocationId</li>
+                <li class="list-group-item">visitedLocations</li>
+                <li class="list-group-item">deathDateTime</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="container border p-4">
+        <h3>Add an Animal</h3>
+        <form>
+            <div class="form-group">
+                <label for="weight">weight</label>
+                <input type="number" class="form-control" id="weight" name="weight" placeholder="Enter animal weight">
+            </div>
+            <div class="form-group">
+                <label for="length">length</label>
+                <input type="number" class="form-control" id="length" name="length" placeholder="Enter animal length">
+            </div>
+            <div class="form-group">
+                <label for="height">height</label>
+                <input type="number" class="form-control" id="height" name="height" placeholder="Enter animal height">
+            </div>
+            <div class="form-group">
+                <label for="gender">gender</label>
+                <input type="text" class="form-control" id="gender" name="gender" placeholder="Enter animal gender">
+            </div>
+            <div class="form-group">
+                <label for="chipperId">chipperId</label>
+                <input type="number" class="form-control" id="chipperId" name="chipperId" placeholder="Enter chipper ID">
+            </div>
+            <div class="form-group">
+                <label for="chippingLocationId">chippingLocationId</label>
+                <input type="number" class="form-control" id="chippingLocationId" name="chippingLocationId" placeholder="Enter chipping Location ID">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
+
+    <div class="container border p-4">
+        <h3>Update an Animal</h3>
+        <form>
+            <div class="form-group">
+                <label for="weight">weight</label>
+                <input type="number" class="form-control" id="weight" name="weight" placeholder="Enter animal weight">
+            </div>
+            <div class="form-group">
+                <label for="length">length</label>
+                <input type="number" class="form-control" id="length" name="length" placeholder="Enter animal length">
+            </div>
+            <div class="form-group">
+                <label for="height">height</label>
+                <input type="number" class="form-control" id="height" name="height" placeholder="Enter animal height">
+            </div>
+            <div class="form-group">
+                <label for="gender">gender</label>
+                <input type="text" class="form-control" id="gender" name="gender" placeholder="Enter animal gender">
+            </div>
+            <div class="form-group">
+                <label for="lifeStatus">lifeStatus</label>
+                <input type="text" class="form-control" id="lifeStatus" name="lifeStatus" placeholder="Enter animal life status">
+            </div>
+            <div class="form-group">
+                <label for="chipperId">chipperId</label>
+                <input type="number" class="form-control" id="chipperId" name="chipperId" placeholder="Enter chipper ID">
+            </div>
+            <div class="form-group">
+                <label for="chippingLocationId">chippingLocationId</label>
+                <input type="number" class="form-control" id="chippingLocationId" name="chippingLocationId" placeholder="Enter chipping Location ID">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+        <div class="card mt-5">
+            <div class="card-header">id</div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">animalTypes</li>
+                <li class="list-group-item">weight</li>
+                <li class="list-group-item">length</li>
+                <li class="list-group-item">height</li>
+                <li class="list-group-item">gender</li>
+                <li class="list-group-item">lifeStatus</li>
+                <li class="list-group-item">chippingDateTime</li>
+                <li class="list-group-item">chipperId</li>
+                <li class="list-group-item">chippingLocationId</li>
+                <li class="list-group-item">visitedLocations</li>
+                <li class="list-group-item">deathDateTime</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="container border p-4">
+        <h3>Delete an Animal</h3>
+        <form>
+            <div class="form-group">
+                <label for="animalId">ID</label>
+                <input type="text" class="form-control" id="animalId" name="animalId" placeholder="Enter animal ID">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+            <div class="alert alert-success mt-3" role="alert">
+                Animal has been deleted!
+            </div>
+        </form>
+    </div>
+</div>
