--- a/animal-chipping-front/src/app/animal-type/animal-type.component.html
+++ b/animal-chipping-front/src/app/animal-type/animal-type.component.html
@@ -1,1 +1,70 @@
-<p>animal-type works!</p>
+<div class="container d-flex">
+    <div class="container border p-4">
+        <h3>Get an Animal type</h3>
+        <form class="mb-3">
+            <div class="form-group">
+                <label for="typeId">ID</label>
+                <input type="number" class="form-control" id="typeId" name="typeId" placeholder="Enter animal type ID">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+        <div class="card">
+            <div class="card-header">id</div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">type</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="container border p-4">
+        <h3>Add an Animal type</h3>
+        <form>
+            <div class="form-group">
+                <label for="type">type</label>
+                <input type="text" class="form-control" id="type" name="type" placeholder="Enter animal type">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+        <div class="card mt-3">
+            <div class="card-header">id</div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">type</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="container border p-4">
+        <h3>Update an Animal type</h3>
+        <form>
+            <div class="form-group">
+                <label for="typeId">ID</label>
+                <input type="number" class="form-control" id="typeId" name="typeId" placeholder="Enter animal type ID">
+            </div>
+            <div class="form-group">
+                <label for="typeId">type</label>
+                <input type="text" class="form-control" id="typeId" name="typeId" placeholder="Enter animal type">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+        <div class="card mt-3">
+            <div class="card-header">id</div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">type</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="container border p-4">
+        <h3>Delete an Animal type</h3>
+        <form>
+            <div class="form-group">
+                <label for="typeId">ID</label>
+                <input type="number" class="form-control" id="typeId" name="typeId" placeholder="Enter animal type ID">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+            <div class="alert alert-success mt-3" role="alert">
+                Animal has been deleted!
+            </div>
+        </form>
+    </div>
+</div>
