--- a/animal-chipping-front/src/app/location/location.component.html
+++ b/animal-chipping-front/src/app/location/location.component.html
@@ -1,1 +1,81 @@
-<p>location works!</p>
+<div class="container d-flex">
+    <div class="container border p-4">
+        <h3>Get an Location</h3>
+        <form class="mb-3">
+            <div class="form-group">
+                <label for="typeId">ID</label>
+                <input type="number" class="form-control" id="typeId" name="typeId" placeholder="Enter Location ID">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+        <div class="card">
+            <div class="card-header">id</div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">latitude</li>
+                <li class="list-group-item">longitude</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="container border p-4">
+        <h3>Add an Location</h3>
+        <form>
+            <div class="form-group">
+                <label for="latitude">latitude</label>
+                <input type="number" class="form-control" id="latitude" name="latitude" placeholder="Enter Location latitude">
+            </div>
+            <div class="form-group">
+                <label for="longitude">longitude</label>
+                <input type="number" class="form-control" id="longitude" name="longitude" placeholder="Enter Location longitude">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+        <div class="card mt-3">
+            <div class="card-header">id</div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">latitude</li>
+                <li class="list-group-item">longitude</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="container border p-4">
+        <h3>Update an Location</h3>
+        <form>
+            <div class="form-group">
+                <label for="locationId">ID</label>
+                <input type="number" class="form-control" id="locationId" name="locationId" placeholder="Enter Location ID">
+            </div>
+            <div class="form-group">
+                <label for="latitude">latitude</label>
+                <input type="number" class="form-control" id="latitude" name="latitude" placeholder="Enter Location latitude">
+            </div>
+            <div class="form-group">
+                <label for="longitude">longitude</label>
+                <input type="number" class="form-control" id="longitude" name="longitude" placeholder="Enter Location longitude">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+        <div class="card mt-3">
+            <div class="card-header">id</div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">latitude</li>
+                <li class="list-group-item">longitude</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="container border p-4">
+        <h3>Delete an Location</h3>
+        <form>
+            <div class="form-group">
+                <label for="typeId">ID</label>
+                <input type="number" class="form-control" id="typeId" name="typeId" placeholder="Enter Location ID">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+            <div class="alert alert-success mt-3" role="alert">
+                Location has been deleted!
+            </div>
+        </form>
+    </div>
+</div>
