--- a/animal-chipping-front/src/app/location/location.component.html
+++ b/animal-chipping-front/src/app/location/location.component.html
@@ -41,26 +41,26 @@
 
     <div class="container border p-4">
         <h3>Update an Location</h3>
-        <form>
+        <form [formGroup]="locationUpdateForm" (ngSubmit)="updateLocation()">
             <div class="form-group">
                 <label for="locationId">ID</label>
-                <input type="number" class="form-control" id="locationId" name="locationId" placeholder="Enter Location ID">
+                <input type="number" class="form-control" id="locationId" formControlName="locationId" placeholder="Enter Location ID">
             </div>
             <div class="form-group">
                 <label for="latitude">latitude</label>
-                <input type="number" class="form-control" id="latitude" name="latitude" placeholder="Enter Location latitude">
+                <input type="number" class="form-control" id="latitude" formControlName="latitude" placeholder="Enter Location latitude">
             </div>
             <div class="form-group">
                 <label for="longitude">longitude</label>
-                <input type="number" class="form-control" id="longitude" name="longitude" placeholder="Enter Location longitude">
+                <input type="number" class="form-control" id="longitude" formControlName="longitude" placeholder="Enter Location longitude">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
-        <div class="card mt-3">
-            <div class="card-header">id</div>
+        <div class="card mt-3" *ngIf="updatedLocation">
+            <div class="card-header">id: {{updatedLocation.id}}</div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">latitude</li>
-                <li class="list-group-item">longitude</li>
+                <li class="list-group-item">latitude: {{updatedLocation.latitude}}</li>
+                <li class="list-group-item">longitude: {{updatedLocation.longitude}}</li>
             </ul>
         </div>
     </div>
