--- a/animal-chipping-front/src/app/location/location.component.html
+++ b/animal-chipping-front/src/app/location/location.component.html
@@ -67,13 +67,13 @@
 
     <div class="container border p-4">
         <h3>Delete an Location</h3>
-        <form>
+        <form [formGroup]="locationDeleteForm" (ngSubmit)="deleteLocation()">
             <div class="form-group">
-                <label for="typeId">ID</label>
-                <input type="number" class="form-control" id="typeId" name="typeId" placeholder="Enter Location ID">
+                <label for="locationId">ID</label>
+                <input type="number" class="form-control" id="locationId" formControlName="locationId" placeholder="Enter Location ID">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
-            <div class="alert alert-success mt-3" role="alert">
+            <div class="alert alert-success mt-3" role="alert" *ngIf="isLocationDeleted">
                 Location has been deleted!
             </div>
         </form>
