--- a/animal-chipping-front/src/app/animal-type/animal-type.component.html
+++ b/animal-chipping-front/src/app/animal-type/animal-type.component.html
@@ -18,17 +18,17 @@
 
     <div class="container border p-4">
         <h3>Add an Animal type</h3>
-        <form>
+        <form [formGroup]="addForm" (ngSubmit)="addAnimalType()">
             <div class="form-group">
                 <label for="type">type</label>
-                <input type="text" class="form-control" id="type" name="type" placeholder="Enter animal type">
+                <input type="text" class="form-control" id="type" formControlName="type" placeholder="Enter animal type">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
-        <div class="card mt-3">
-            <div class="card-header">id</div>
+        <div class="card mt-3" *ngIf="addedAnimalType">
+            <div class="card-header">id: {{addedAnimalType.id}}</div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">type</li>
+                <li class="list-group-item">type: {{addedAnimalType.type}}</li>
             </ul>
         </div>
     </div>
