--- a/animal-chipping-front/src/app/account/account.component.html
+++ b/animal-chipping-front/src/app/account/account.component.html
@@ -1,56 +1,63 @@
 <div class="container d-flex">
     <div class="container border p-4">
-        <h3>Get an Account by ID</h3>
-        <form class="mb-3">
+        <h3>Find an Account</h3>
+        <form [formGroup]="findForm" (ngSubmit)="findAccount()">
             <div class="form-group">
-                <label for="id">ID</label>
-                <input type="text" class="form-control" id="id" name="id" placeholder="Enter ID">
+                <label for="accountId">ID</label>
+                <input type="text" class="form-control" id="accountId" formControlName="accountId" placeholder="Enter ID">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
-        <div class="card">
-            <div class="card-header">id</div>
+        <div class="card mt-3" *ngIf="foundedAccount">
+            <div class="card-header">id: {{foundedAccount.id}}</div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">First name</li>
-                <li class="list-group-item">Last name</li>
-                <li class="list-group-item">email</li>
+                <li class="list-group-item">First name: {{foundedAccount.firstName}}</li>
+                <li class="list-group-item">Last name: {{foundedAccount.lastName}}</li>
+                <li class="list-group-item">email: {{foundedAccount.email}}</li>
             </ul>
         </div>
     </div>
 
     <div class="container border p-4">
-        <h3>Add a new Account</h3>
-        <form>
+        <h3>Update an Account</h3>
+        <form [formGroup]="updateForm" (ngSubmit)="updateAccount()">
             <div class="form-group">
-                <label for="firstName2">First Name</label>
-                <input type="text" class="form-control" id="firstName2" name="firstName2"
-                    placeholder="Enter First Name">
+                <label for="firstName">First Name</label>
+                <input type="text" class="form-control" id="firstName" formControlName="firstName" placeholder="Enter First Name">
             </div>
             <div class="form-group">
-                <label for="lastName2">Last Name</label>
-                <input type="text" class="form-control" id="lastName2" name="lastName2" placeholder="Enter Last Name">
+                <label for="lastName">Last Name</label>
+                <input type="text" class="form-control" id="lastName" formControlName="lastName" placeholder="Enter Last Name">
             </div>
             <div class="form-group">
-                <label for="email2">Email</label>
-                <input type="email" class="form-control" id="email2" name="email2" placeholder="Enter Email">
+                <label for="email">Email</label>
+                <input type="email" class="form-control" id="email" formControlName="email" placeholder="Enter Email">
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" class="form-control" id="password" name="password" placeholder="Enter Password">
+                <input type="password" class="form-control" id="password" formControlName="password" placeholder="Enter Password">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
+        <div class="card mt-3" *ngIf="updatedAccount">
+            <div class="card-header">id: {{updatedAccount.id}}</div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">First name: {{updatedAccount.firstName}}</li>
+                <li class="list-group-item">Last name: {{updatedAccount.lastName}}</li>
+                <li class="list-group-item">email: {{updatedAccount.email}}</li>
+            </ul>
+        </div>
     </div>
 
     <div class="container border p-4">
         <h3>Delete an Account</h3>
-        <form>
+        <form [formGroup]="deleteForm" (ngSubmit)="deleteAccount()">
             <div class="form-group">
-                <label for="id2">ID</label>
-                <input type="text" class="form-control" id="id2" name="id2" placeholder="Enter ID">
+                <label for="accountId">ID</label>
+                <input type="text" class="form-control" id="accountId" name="accountId" placeholder="Enter ID">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
-            <div class="alert alert-success mt-3" role="alert">
+            <div class="alert alert-success mt-3" role="alert" *ngIf="isAccountDeleted">
                 Account has been deleted!
             </div>
         </form>
