--- a/animal-chipping-front/src/app/location/location.component.html
+++ b/animal-chipping-front/src/app/location/location.component.html
@@ -54,7 +54,7 @@
                 <label for="longitude">longitude</label>
                 <input type="number" class="form-control" id="longitude" formControlName="longitude" placeholder="Enter Location longitude">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button [disabled]="updateForm.invalid" type="submit" class="btn btn-primary">Submit</button>
         </form>
         <div class="card mt-3" *ngIf="updatedLocation">
             <div class="card-header">id: {{updatedLocation.id}}</div>
