--- a/animal-chipping-front/src/app/animal/animal.component.html
+++ b/animal-chipping-front/src/app/animal/animal.component.html
@@ -55,7 +55,7 @@
             </div>
             <div class="form-group">
                 <label for="animalTypes">animalTypes</label>
-                <input type="text" class="form-control" id="animalTypes" formControlName="animalTypes" placeholder="Enter animal type">
+                <input type="number" class="form-control" id="animalTypes" formControlName="animalTypes" placeholder="Enter animal type">
             </div>
             <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Submit</button>
         </form>
