--- a/animal-chipping-front/src/app/account/account.component.html
+++ b/animal-chipping-front/src/app/account/account.component.html
@@ -2,9 +2,9 @@
     <div class="container border p-4">
         <h3>Find an Account</h3>
         <form [formGroup]="findForm" (ngSubmit)="findAccount()">
-            <div class="form-group">
-                <label for="accountId">ID</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="accountId" formControlName="accountId" placeholder="Enter ID">
+                <label for="accountId">ID</label>
             </div>
             <button [disabled]="findForm.invalid" type="submit" class="btn btn-primary">Submit</button>
         </form>
@@ -21,25 +21,25 @@
     <div class="container border p-4">
         <h3>Update an Account</h3>
         <form [formGroup]="updateForm" (ngSubmit)="updateAccount()">
-            <div class="form-group">
-                <label for="accountId">ID</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="accountId" formControlName="accountId" placeholder="Enter account ID">
+                <label for="accountId">ID</label>
             </div>
-            <div class="form-group">
-                <label for="firstName">First Name</label>
+            <div class="form-floating my-3">
                 <input type="text" class="form-control" id="firstName" formControlName="firstName" placeholder="Enter First Name">
+                <label for="firstName">First Name</label>
             </div>
-            <div class="form-group">
-                <label for="lastName">Last Name</label>
+            <div class="form-floating my-3">
                 <input type="text" class="form-control" id="lastName" formControlName="lastName" placeholder="Enter Last Name">
+                <label for="lastName">Last Name</label>
             </div>
-            <div class="form-group">
-                <label for="email">Email</label>
+            <div class="form-floating my-3">
                 <input type="email" class="form-control" id="email" formControlName="email" placeholder="Enter Email">
+                <label for="email">Email</label>
             </div>
-            <div class="form-group">
-                <label for="password">Password</label>
+            <div class="form-floating my-3">
                 <input type="password" class="form-control" id="password" formControlName="password" placeholder="Enter Password">
+                <label for="password">Password</label>
             </div>
             <button [disabled]="updateForm.invalid" type="submit" class="btn btn-primary">Submit</button>
         </form>
@@ -56,9 +56,9 @@
     <div class="container border p-4">
         <h3>Delete an Account</h3>
         <form [formGroup]="deleteForm" (ngSubmit)="deleteAccount()">
-            <div class="form-group">
-                <label for="accountId">ID</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="accountId" formControlName="accountId" placeholder="Enter ID">
+                <label for="accountId">ID</label>
             </div>
             <button [disabled]="deleteForm.invalid" type="submit" class="btn btn-primary">Submit</button>
             <div class="alert alert-success mt-3" role="alert" *ngIf="isAccountDeleted">
