--- a/animal-chipping-front/src/app/animal-type/animal-type.component.html
+++ b/animal-chipping-front/src/app/animal-type/animal-type.component.html
@@ -2,9 +2,9 @@
     <div class="container border p-4">
         <h3>Get an Animal type</h3>
         <form [formGroup]="findForm" (ngSubmit)="findAnimalType()">
-            <div class="form-group">
-                <label for="typeId">ID</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="typeId" formControlName="typeId" placeholder="Enter animal type ID">
+                <label for="typeId">ID</label>
             </div>
             <button [disabled]="findForm.invalid" type="submit" class="btn btn-primary">Submit</button>
         </form>
@@ -19,9 +19,9 @@
     <div class="container border p-4">
         <h3>Add an Animal type</h3>
         <form [formGroup]="addForm" (ngSubmit)="addAnimalType()">
-            <div class="form-group">
-                <label for="type">type</label>
+            <div class="form-floating my-3">
                 <input type="text" class="form-control" id="type" formControlName="type" placeholder="Enter animal type">
+                <label for="type">type</label>
             </div>
             <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Submit</button>
         </form>
@@ -36,13 +36,13 @@
     <div class="container border p-4">
         <h3>Update an Animal type</h3>
         <form [formGroup]="updateForm" (ngSubmit)="updateAnimalType()">
-            <div class="form-group">
-                <label for="typeId">ID</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="typeId" formControlName="typeId" placeholder="Enter animal type ID">
+                <label for="typeId">ID</label>
             </div>
-            <div class="form-group">
-                <label for="type">type</label>
+            <div class="form-floating my-3">
                 <input type="text" class="form-control" id="type" formControlName="type" placeholder="Enter animal type">
+                <label for="type">type</label>
             </div>
             <button [disabled]="updateForm.invalid" type="submit" class="btn btn-primary">Submit</button>
         </form>
@@ -57,9 +57,9 @@
     <div class="container border p-4">
         <h3>Delete an Animal type</h3>
         <form [formGroup]="deleteForm" (ngSubmit)="deleteAnimalType()">
-            <div class="form-group">
-                <label for="typeId">ID</label>
+            <div class="form-floating my-3">
                 <input type="number" class="form-control" id="typeId" formControlName="typeId" placeholder="Enter animal type ID">
+                <label for="typeId">ID</label>
             </div>
             <button [disabled]="deleteForm.invalid" type="submit" class="btn btn-primary">Submit</button>
             <div class="alert alert-success mt-3" role="alert" *ngIf="isAnimalTypeDeleted">
